--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "start": "node server.js",
     "dev": "node server.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
     "bcryptjs": "^2.4.3",
     "express-session": "^1.17.3",
-    "socket.io": "^4.5.4",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "socket.io": "^4.5.4"
   }
 }
